--- a/index.html
+++ b/index.html
@@ -1,12 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>electionQC</title>
+    
+    <link rel="stylesheet" href="style.css">
+
+    <script src="https://kit.fontawesome.com/80e9d74121.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
+    <div class="conteneur-principal">
+        <header>
+            <h1>
+                Élection Québec 2022
+            </h1>
+            <h2>
+                Arthabaska
+            </h2>
+        </header>
+        <article>
+            <div class="conteneur-parti" id="PLQ">
+                <div class="conteneur-identification">
+                    <h3>Luciana ARANTES</h3>
+                    <h4> Parti libéral du Québec</h4>
+                </div>
+                <div class="cercleVide">
+                    <i class="fa-regular fa-circle"></i>
+                </div>
+                <div class="cercleCheck">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </div>
+
+            <div class="conteneur-parti" id="PQ">
+                <div class="conteneur-identification">
+                    <h3>Mario BEAUCHESNE</h3>
+                    <h4> Parti québécois</h4>
+                </div>
+                <div class="cercleVide">
+                    <i class="fa-regular fa-circle"></i>
+                </div>
+                <div class="cercleCheck">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </div>    
+            <div class="conteneur-parti" id="QS">
+                <div class="conteneur-identification">
+                    <h3>Pascale FORTIN</h3>
+                    <h4> Québec Solidaire</h4>
+                </div>
+                <div class="cercleVide">
+                    <i class="fa-regular fa-circle"></i>
+                </div>
+                <div class="cercleCheck">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </div>
+            <div class="conteneur-parti" id="PCQ">
+                <div class="conteneur-identification">
+                    <h3>Tarek HENOUD</h3>
+                    <h4> Parti conservateur du Québec</h4>
+                </div>
+                <div class="cercleVide">
+                    <i class="fa-regular fa-circle"></i>
+                </div>
+                <div class="cercleCheck">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </div>
+            <div class="conteneur-parti" id="CAQ">
+                <div class="conteneur-identification">
+                    <h3>Eric LEFEBVRE</h3>
+                    <h4> Coalition avenir Québec</h4>
+                </div>
+                <div class="cercleVide">
+                    <i class="fa-regular fa-circle"></i>
+                </div>
+                <div class="cercleCheck">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </div>
+            <div class="conteneur-parti" id="CQ">
+                <div class="conteneur-identification">
+                    <h3>Trystan MARTEL</h3>
+                    <h4> Climat Québec</h4>
+                </div>
+                <div class="cercleVide">
+                    <i class="fa-regular fa-circle"></i>
+                </div>
+                <div class="cercleCheck">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </div>
+
+        </article>
+        <footer>
+            <button>
+                Je vote
+            </button>
+            <div class="down">
+                <h5> @ Krystabella Chagnon </h5>
+                <img src="./assets/images/logo_election_quebec.png" alt="logoelection">
+            </div>
+
+        </footer>
+
+    </div>
     
 </body>
 </html>
